<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hue Limited Edition</string>
    
    <!-- Link activity -->
    <string name="link_local">Local bridges</string>
    <string name="link_empty">No bridges found so far.</string>
    
    <!-- Lights activity -->
    <string name="lights_connecting">Connecting to bridge&#8230;</string>
    <string name="lights_not_connected">Not connected to bridge.</string>
    
    <string name="lights_groups">Groups</string>
    
    <string name="lights_group_all">All lights</string>
    <string name="lights_group_other_only">Lights</string>
    
    <string name="lights_on">ON</string>
    <string name="lights_off">OFF</string>
    
    <!-- Light activity -->
    <string name="light_light">Light</string>
    <string name="light_name">Name:</string>
    <string name="light_color">Color</string>
    <string name="light_save_preset">Save as preset</string>
    <string name="light_edit">Edit light</string>
    
    <!-- Group activity -->
    <string name="group_group">Group</string>
    <string name="group_name">Name:</string>
    <string name="group_lights">Lights:</string>
    <string name="group_color">Color</string>
    <string name="group_save_preset">Save as preset</string>
    <string name="group_create">Create group</string>
    <string name="group_new">New group</string>
    <string name="group_no_lights">Tap to select lights</string>
    <string name="group_all_lights">All lights</string>
    
    <!-- Widgets -->
    <string name="widget_lights_label">Hue lights</string>
    <string name="widget_group_label">Hue group</string>
    
    <!-- Config activity -->
    <string name="widget_config_create">Create widget</string>
    
    <string name="widget_config_error_bridge">First select a bridge in the application!</string>
    <string name="widget_config_error_connection">Failed to connect to bridge!</string>
    
    <!-- Lights widget config activity -->
    <string name="widget_lights_config_connecting">Retrieving list of lights&#8230;</string>
    
    <string name="widget_lights_config_lights">Lights</string>
    
    <string name="widget_lights_config_error_too_many">Maximum of 6 lights exceeded</string>
    <string name="widget_lights_config_error_too_few">Minimum of 1 light required</string>
    
    <!-- Group widget config activity -->
    <string name="widget_group_config_connecting">Retrieving list of groups&#8230;</string>
    
    <string name="widget_group_config_groups">Groups</string>
    <string name="widget_group_config_all_lights">All lights</string>
    
    <!-- Dialogs -->
    <string name="dialog_bridge_search_title">Bridge search failed</string>
    
    <string name="dialog_bridge_lost_title">Link failed</string>
    
    <string name="dialog_link">Press the link button on the bridge to connect.</string>
    
    <string name="dialog_bridge_ip">IP address</string>
    <string name="dialog_bridge_mac">MAC address</string>
    <string name="dialog_bridge_software">Software version</string>
    <string name="dialog_bridge_connect">Connect</string>
    
    <string name="dialog_network_error_title">Network error</string>
    <string name="dialog_network_error">Make sure you have an active network connection and try again.</string>
    
    <string name="dialog_remove_preset_title">Color preset</string>
    <string name="dialog_remove_preset">Would you like to remove this preset?</string>
    
    <string name="dialog_remove_group">Are you sure you want to remove this group?</string>
    
    <string name="dialog_no_lights_title">No lights selected</string>
    <string name="dialog_no_lights">You cannot create a group without lights.</string>
    
    <string name="dialog_lights_title">Lights</string>
    
    <string name="dialog_too_many_groups_title">Group limit reached</string>
    <string name="dialog_too_many_groups">You can\'t add more than 16 groups to a bridge!</string>
    
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_create">Create</string>
    
    <!-- Menus -->
    <string name="menu_bridges">Search bridges</string>
    <string name="menu_new_group">New group</string>
    <string name="menu_delete_group">Remove group</string>
    <string name="menu_undo">Undo</string>
</resources>
