<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">
    
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="3dp"
	    android:textColor="#bebebe"
	    android:textSize="14sp"
	    android:text="@string/dialog_bridge_ip" />
	
	<TextView
	    android:id="@+id/dialog_bridge_ip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dp"
	    android:textColor="#bebebe"
	    android:textSize="16sp"
	    android:textStyle="bold" />
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="3dp"
	    android:textColor="#bebebe"
	    android:textSize="14sp"
	    android:text="@string/dialog_bridge_mac" />
	
	<TextView
	    android:id="@+id/dialog_bridge_mac"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dp"
	    android:textColor="#bebebe"
	    android:textSize="16sp"
	    android:textStyle="bold" />
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="3dp"
	    android:textColor="#bebebe"
	    android:textSize="14sp"
	    android:text="@string/dialog_bridge_software" />
	
	<TextView
	    android:id="@+id/dialog_bridge_software"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="#bebebe"
	    android:textSize="16sp"
	    android:textStyle="bold" />
</LinearLayout>
